변수와 자료형.md 수정

--- a/TIL/Java/변수와 자료형.md
+++ b/TIL/Java/변수와 자료형.md
@@ -115,3 +115,28 @@ System.out.println(doubleType);  // 1.1233999729156494
 	- String.valueOf(정수);  => 정수 부분에 null이 들어가면 문자열 null로 표현
 	- Integer.toString(정수);  => 정수 부분에 null이 들어가면 NullPointException이 발생
 	- 정수 + " ";  => 덧셈 연산 시 정수가 자동으로 문자열로 형변환 됨을 이용한 방법으로 간편하나 효율성이 떨어짐
+
+- 문자열 -> 정수형
+	- Integer.parseInt(문자열);  => 정수로 변환할 수 있는 형태의 문자열만 가능
+```Java
+// String -> int
+String stringType = "100";
+
+int intType = Integer.parseInt(stringType);
+System.out.println(intType);  // 100
+```
+
+- 실수형 -> 문자열
+	- String.valueOf(실수);
+	- Double.toString(실수);
+	- 실수 + " ";
+
+- 문자열 -> 실수형
+	- Double.parseDouble(문자열); => 실수로 변환할 수 있는 형태의 문자열만 가능
+```Java
+// String -> double
+String stringType = "1.1234";
+
+double doubleType = Double.parseDouble(stringType);
+System.out.println(doubleType);  // 1.1234
+```
